Fix list alignment for profiles

--- a/main/static/styles/views/user_profile/_summary.scss
+++ b/main/static/styles/views/user_profile/_summary.scss
@@ -18,9 +18,13 @@
         display: flex;
         flex-direction: column;
         margin-left: $large-spacing;
+        width: 300px;
+        text-align: left;
 
         a {
             font-size: $medium-font-size;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
     }
 }
